feat(random): Introduce fast random configuration options and custom RNG implementations